--- a/style.css
+++ b/style.css
@@ -10,14 +10,23 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #000000;
+    color: skyblue;
+    flex-direction: column;
+}
+body h1{
+    position: absolute;
+    top: 5rem;
+    font-size: 5rem;
 }
 .carusal{
-    height: 40%;
+    height: 50%;
     width: 50%;
     position: relative;
     /* border: 2px solid red; */
     overflow: hidden;
     border-radius: 2rem;
+    box-shadow: 0 0 2rem skyblue;
 }
 .slider{
     height: 100%;
